[package]
name = "FlasterDB_Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clokwerk = "0.4.0"
serde = "1.0.188"
serde_json = "1.0.105"
sysinfo = "0.29.9"
tokio = {version = "1.32.0", features = ["full"]}
tracing = "0.1.37"